# rsomics-kbins

./: Cargo.toml  PERF_NOTES.md  README.md
benches/: kbins.rs
src/: cli.rs  io.rs  kbins.rs  lib.rs  quantile.rs
tests/: compat.rs
tests/golden/: all_nan.tsv  basic_5x3.tsv  basic_5x3_quantile_n5_ordinal.tsv  basic_5x3_uniform_n3_ordinal.tsv  constant_col.tsv  constant_col_quantile_n5_ordinal.tsv  degenerate_quantile.tsv  degenerate_quantile_n5_ordinal.tsv  medium_8x4.tsv  medium_8x4_uniform_n10_onehot.tsv  mixed_nan.tsv  negative_vals.tsv  negative_vals_uniform_n5_ordinal.tsv  no_header_15x3.tsv  no_header_15x3_quantile_n10_ordinal.tsv  normal_20x5.tsv  normal_20x5_uniform_n5_ordinal.tsv  rand_10x3.tsv  rand_10x3_quantile_n3_onehot.tsv  tied_col.tsv  tied_col_quantile_n5_ordinal.tsv
