[package]
name = "rsomics-kbins"
version = "0.1.0"
description = "Per-column binning (KBinsDiscretizer uniform + quantile) — value-exact scikit-learn equivalent"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-kbins"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["discretization", "binning", "kbins", "scikit-learn", "preprocessing"]
readme = "README.md"

[[bin]]
name = "rsomics-kbins"
path = "src/main.rs"

[lib]
name = "rsomics_kbins"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
fast-float2 = "0.2"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"
tempfile = "3"

[[bench]]
name = "kbins"
harness = false
